# pitchtool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/sw/: frequencyenvelope.hpp  frequencyfilter.hpp  notes.hpp  phases.hpp  pitchprocessor.hpp  processingbuffer.hpp  signals.hpp  spectrum.hpp  tuningnoteenvelope.hpp
backend/sw/basics/: chrono.hpp  math.hpp  ranges.hpp  variant.hpp
backend/sw/containers/: spinlockedbuffer.hpp  utils.hpp
backend/sw/dft/: spectrum.hpp  transform.hpp  utils.hpp
backend/sw/pitchtool/: processor.hpp  types.hpp
juce/: CMakeLists.txt
juce/sw/juce/pitchtool/: editor.cpp  editor.h  processor.cpp  processor.h
juce/sw/juce/ui/: groupcomponent.cpp  groupcomponent.h  notedisplay.cpp  notedisplay.h  plot.cpp  plot.h  roundslider.cpp  roundslider.h  utils.h
tests/: CMakeLists.txt
tests/sw/: notes.cpp  phases.cpp  pitchprocessor.cpp  sinewavedetection.cpp
tests/sw/dft/: spectrum.cpp  transform.cpp
